--- a/.github/workflows/yamlfmt.yml
+++ b/.github/workflows/yamlfmt.yml
@@ -16,4 +16,4 @@ jobs:
         run: |-
           wget https://github.com/google/yamlfmt/releases/download/v0.10.0/yamlfmt_0.10.0_Linux_x86_64.tar.gz
           tar -xf yamlfmt_0.10.0_Linux_x86_64.tar.gz
-          ./yamlfmt .
+          ./yamlfmt -lint .
