--- a/.github/workflows/terraform-stg.yml
+++ b/.github/workflows/terraform-stg.yml
@@ -44,12 +44,14 @@ jobs:
       # https://github.com/terraform-linters/setup-tflint
       - uses: terraform-linters/setup-tflint@v3
       - run: tflint --init
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - run: tflint -f compact
       # tfsec
       # https://github.com/aquasecurity/tfsec-pr-commenter-action
       - uses: aquasecurity/tfsec-pr-commenter-action@v1.2.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ github.token }}
           working_directory: terraform/stg
   terraform-plan:
     if: github.event_name == 'pull_request'
