--- a/.github/workflows/terraform-stg.yml
+++ b/.github/workflows/terraform-stg.yml
@@ -45,15 +45,17 @@ jobs:
       - uses: terraform-linters/setup-tflint@v3
       - run: tflint --init
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: tflint -f compact
       # tfsec
       # https://github.com/aquasecurity/tfsec-pr-commenter-action
       - uses: aquasecurity/tfsec-pr-commenter-action@v1.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           github_token: ${{ github.token }}
           # https://github.com/aquasecurity/tfsec-pr-commenter-action/issues/90
-          working_directory: ''
+          working_directory: terraform/stg
   terraform-plan:
     if: github.event_name == 'pull_request'
     environment: stg
