--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -7,16 +7,7 @@ on:
 jobs:
   tflint:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-      pull-requests: write
     steps:
-      # https://github.com/actions/checkout
       - uses: actions/checkout@v4
-      # https://github.com/terraform-linters/setup-tflint
       - uses: terraform-linters/setup-tflint@v3
-      - run: tflint -f compact --recursive
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      
+      - run: tflint --recursive --format compact      
