reviewdog/action-tflint

--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -9,5 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: terraform-linters/setup-tflint@v3
-      - run: tflint --recursive --format compact      
+      - uses: reviewdog/action-tflint@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          flags: "--recursive"
