--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          flags: "--recursive"
+          flags: "--recursive --config=${{ github.workspace }}/terraform/.tflint.hcl"
