--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -13,4 +13,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
+          level: info
+          filter_mode: nofilter
+          fail_on_error: true
           flags: "--recursive --config=${{ github.workspace }}/terraform/.tflint.hcl"
