--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -11,9 +11,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-tflint@v1
         with:
-          github_token: ${{ secrets.github_token }}
+          github_token: ${{ github.token }}
+          working_directory: terraform/stg
           reporter: github-pr-review
-          level: info
-          filter_mode: nofilter
-          fail_on_error: true
-          flags: "--recursive --config=${{ github.workspace }}/terraform/.tflint.hcl"
