--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: reviewdog/action-tflint@v1
         with:
           github_token: ${{ github.token }}
-          working_directory: terraform/stg
           reporter: github-pr-review
+          flags: --recursive
+          level: info
