--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-tflint@v1
         with:
-          github_token: ${{ github.token }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           flags: --recursive
           level: info
