--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -15,3 +15,4 @@ jobs:
           reporter: github-pr-review
           flags: --recursive
           level: info
+          tflint_config: terrform/.tflint.hcl
