--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -13,6 +13,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
+          filter_mode: nofilter
           flags: --recursive
-          level: info
-          tflint_config: ${{ github.workspace }}/terrform/.tflint.hcl
