--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -16,4 +16,4 @@ jobs:
           filter_mode: nofilter
           tflint_config: ${{ github.workspace }}/terraform/.tflint.hcl
           flags: --recursive
-          working_directory: ${{ github.workspace }}/terraform
+          working_directory: terraform
