--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -17,3 +17,4 @@ jobs:
           tflint_config: ${{ github.workspace }}/terraform/.tflint.hcl
           flags: --recursive
           working_directory: terraform
+          level: info
