--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 app
+publish
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,vim,visualstudiocode,emacs,terraform,go,python,react,nextjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,vim,visualstudiocode,emacs,terraform,go,python,react,nextjs
