--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-app
-publish
+app/app
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,vim,visualstudiocode,emacs,terraform,go,python,react,nextjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,vim,visualstudiocode,emacs,terraform,go,python,react,nextjs
